<resources>
    <string name="app_name"><b>yoda\'s box</b></string>

    <string name="settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="textHome">Find the right character you must</string>
    <string name="start">Start</string>
    <string name="informations">i</string>
    <string name="character_name">Toto</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="action_settings">Settings</string>
    <string name="yoda">API Yoda</string>


    <string name="undefined">Loading</string>
    <string name="question">Cherche et ce personnage tu trouveras</string>
    <string name="result">The good answer you found</string>
    <string name="continueGame">Next question</string>



    <!-- Dialogs messages -->
    <string name="backMenu">Leave the game ?</string>
    <string name="informations_popup">With six clues (eye color, height, hair color, skin color, gender, home planet), you have to found the right character amongst three proposition.</string>
    <string name="howtoplay">HOW TO PLAY</string>




</resources>
